{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 169,
  "lineage": "aac2f76c-1587-8c29-0c8a-fa0386e554a2",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0f958495da4434d16"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0f958495da4434d16"
                ]
              }
            ],
            "id": "igw-0a6889223bcd1fa28",
            "internet_gateway_id": "igw-0a6889223bcd1fa28",
            "owner_id": "135928476890",
            "tags": {
              "Name": "victor-jack-zaid-eng47-itgw"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09f0478228932d57d",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-031d2fd1da2f7a93c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-031d2fd1da2f7a93c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-03a21b6ec03e84c23",
            "private_dns": "ip-10-0-0-69.eu-west-1.compute.internal",
            "private_ip": "10.0.0.69",
            "public_dns": "ec2-54-154-229-38.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.154.229.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d2c40761dfe5fe4c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059b2b75eb80a9df3",
            "tags": {
              "Name": "victor-engineering47-terraform-app2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03bc8f924174424d1"
            ]
          },
          "dependencies": [
            "aws_security_group.app_security_group",
            "aws_subnet.vic_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-079cb8c8e602ed819",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-03e944fbe087582a1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03e944fbe087582a1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0f37cfb8340166f6e",
            "private_dns": "ip-10-0-0-8.eu-west-1.compute.internal",
            "private_ip": "10.0.0.8",
            "public_dns": "ec2-34-252-82-208.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.252.82.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bfffe5f09bc365ca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059b2b75eb80a9df3",
            "tags": {
              "Name": "victor-engineering47-terraform-mongo2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08582baa4ceb73e43"
            ]
          },
          "dependencies": [
            "aws_security_group.mongo_security_group",
            "aws_subnet.vic_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0762a2fab6dd1f240",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6889223bcd1fa28",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "victor-eng47-app-route-table"
            },
            "vpc_id": "vpc-0f958495da4434d16"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-03bc8f924174424d1",
            "description": "allow inbound Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03bc8f924174424d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "victor_app_security_group",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "victor-eng47-terraform-app-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f958495da4434d16"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongo_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-08582baa4ceb73e43",
            "description": "allow inbound Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08582baa4ceb73e43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "victor_db_security_group",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "victor-eng47-terraform-mongo-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f958495da4434d16"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vic_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-059b2b75eb80a9df3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-059b2b75eb80a9df3",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "victor-eng47-subnet"
            },
            "vpc_id": "vpc-0f958495da4434d16"
          }
        }
      ]
    }
  ]
}